--- a/src/Users/components/Newsletter/Newsletter.css
+++ b/src/Users/components/Newsletter/Newsletter.css
@@ -1,5 +1,5 @@
 .newsletterContainer{  
-  height: 60vh;
+  margin-top: 3rem;
   background-color: #fcf5f5;
   display: flex;
   align-items: center;
