--- a/src/Users/components/Products/products.css
+++ b/src/Users/components/Products/products.css
@@ -5,14 +5,14 @@ margin-top: 8rem;
 }
 
 .p-container .swiper{
-    width: 70%;
+    width: 80%;
     position: unset;
 }
     
 
     
 .p-container .swiper-slide{
-    border-radius: 12px;
+    /* border-radius: 12px; */
     /* padding: 1rem; */
     box-sizing: border-box;
     overflow: hidden;
@@ -20,12 +20,12 @@ margin-top: 8rem;
 }
     
 .p-container .swiper-button-prev{
-    left: 7rem;
+    left: 3rem;
     
     
 }
 .p-container .swiper-button-next{
-    right: 7rem;
+    right: 3rem;
     
 }
 .p-container .swiper-button-next,.p-container .swiper-button-prev{
@@ -49,8 +49,15 @@ margin-top: 8rem;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
-    height: 7rem;
+    width: 80%;
+    height: auto;
+    border-radius: 2rem;
+
+    }
+ .p-watch-image{
+  
+    width: 80%;
+    height: 26rem;
     border-radius: 2rem;
 
     }
@@ -66,31 +73,55 @@ margin-top: 8rem;
         }
    
 
+@media (max-width: 810px) {
+    .p-image{
+       
+        width: 100%;
+        height: auto;
+        border-radius: 2rem;
+    
+        }
+    .p-watch-image{
+  
+        width: 100%;
+        height: 19.5rem;
+        border-radius: 2rem;
+    
+        }
+    
+}
+
 @media (max-width: 600px) {
 
-    .p-container .swiper{
-        width: 75%;
-        /* height: 9rem; */
-        position: unset;
-    }
     .p-container .swiper-button-prev{
         left: .1rem;
-        /* width: 1rem; */
-        
+        top: 5rem;
         
     }
     .p-container .swiper-button-next{
         right: .1rem;
+        top: 5rem;
         
     }
-    .name{
-        flex-direction: column;
+ 
+    .p-watch-image{
+  
+        width: 100%;
+        height: 9.5rem;
+        border-radius: 2rem;
     
-    }
-    .p-image{
-   border-radius: .3rem;
-   width: 5rem;
+        }
+    
+}
+@media (max-width: 375px) {
 
-    }
-      
+  
+    .p-watch-image{
+  
+        width: 100%;
+        height: 8rem;
+        border-radius: 2rem;
+    
+        }
+    
 }
