--- a/src/Users/components/Sliders/Slider.css
+++ b/src/Users/components/Sliders/Slider.css
@@ -1,15 +1,21 @@
 
 .container-slider {
-  max-width: 700px;
-  height: 400px;
-  margin: 10px auto 0;
+  /* max-width: 700px; */
+  max-width: 90vw;
+  height: 90vh;
+  /* height: 400px; */
+  margin: 14px auto 0;
   position: relative;
   overflow: hidden;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
+
 @media screen and (max-width: 700px){
   .container-slider {
-    margin: 10px 10px 0;
+  max-width: 700px;
+  height: 400px;
+
+    margin: 10px 2px 0;
   }
 }
 .slide {
@@ -17,7 +23,7 @@
   height: 100%;
   position: absolute;
   opacity: 0;
-  transition: opacity ease-in-out 0.4s;
+  transition: opacity ease-in-out 0.9s;
 }
 .slide img {
   width: 100%;
