--- a/src/Users/components/Products/products.css
+++ b/src/Users/components/Products/products.css
@@ -2,126 +2,8 @@
 .p-container{
 position: relative;
 margin-top: 8rem;
-}
-
-.p-container .swiper{
-    width: 80%;
-    position: unset;
-}
-    
-
-    
-.p-container .swiper-slide{
-    /* border-radius: 12px; */
-    /* padding: 1rem; */
-    box-sizing: border-box;
-    overflow: hidden;
-    position: relative;
-}
-    
-.p-container .swiper-button-prev{
-    left: 3rem;
-    
-    
-}
-.p-container .swiper-button-next{
-    right: 3rem;
-    
-}
-.p-container .swiper-button-next,.p-container .swiper-button-prev{
-    color: red;
-    
-}
-    
-.left-s{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-.name{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    margin-top: .5rem;
+padding: 0 3rem 0 3rem;
 
 }
- .p-image{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 80%;
-    height: auto;
-    border-radius: 2rem;
 
-    }
- .p-watch-image{
-  
-    width: 80%;
-    height: 26rem;
-    border-radius: 2rem;
 
-    }
-
-    .p-title{
-        text-align: center;
-        color: black;
-        }
-        .p-price{
-        text-align: center;
-        color:blue;
-        
-        }
-   
-
-@media (max-width: 810px) {
-    .p-image{
-       
-        width: 100%;
-        height: auto;
-        border-radius: 2rem;
-    
-        }
-    .p-watch-image{
-  
-        width: 100%;
-        height: 19.5rem;
-        border-radius: 2rem;
-    
-        }
-    
-}
-
-@media (max-width: 600px) {
-
-    .p-container .swiper-button-prev{
-        left: .1rem;
-        top: 5rem;
-        
-    }
-    .p-container .swiper-button-next{
-        right: .1rem;
-        top: 5rem;
-        
-    }
- 
-    .p-watch-image{
-  
-        width: 100%;
-        height: 9.5rem;
-        border-radius: 2rem;
-    
-        }
-    
-}
-@media (max-width: 375px) {
-
-  
-    .p-watch-image{
-  
-        width: 100%;
-        height: 8rem;
-        border-radius: 2rem;
-    
-        }
-    
-}
