--- a/src/Users/components/ProductLists/productList.css
+++ b/src/Users/components/ProductLists/productList.css
@@ -1,40 +1,10 @@
-.productListContainer{
+.pListContainer{
     margin-top: 1.4rem;
+    text-align: center;
 }
-.productTitle{
+.pTitle{
 font-weight: 500;
 font-size: 2rem;
-}
-.title{
-  margin: 20px;
-}
+margin-bottom: -6rem;
 
- .filterContainer{
-  display: flex;
-  justify-content: space-between;
-}
-
- .filter {
-  margin: 20px;
-}
-
-.filterText {
-  font-size: 20px;
-  font-weight: 600;
-  margin-right: 20px;
-}
-
-.select {
-  padding: 10px;
-  margin-right: 20px;
-}
-
-@media (max-width: 600px) {
-    .filter{
-          display: flex; 
-          flex-direction: column;
-}
-.select {
-    margin-top: .5rem;
-  }
 }
