--- a/src/Users/components/Sliders/Slider.css
+++ b/src/Users/components/Sliders/Slider.css
@@ -1,62 +1,39 @@
 
-.container-slider {
-  /* max-width: 700px; */
-  max-width: 90vw;
-  height: 90vh;
-  /* height: 400px; */
-  margin: 14px auto 0;
-  position: relative;
+.slider-container {
   overflow: hidden;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-}
-
-@media screen and (max-width: 700px){
-  .container-slider {
-  max-width: 700px;
-  height: 400px;
-
-    margin: 10px 2px 0;
-  }
-}
-.slide {
   width: 100%;
-  height: 100%;
-  position: absolute;
-  opacity: 0;
-  transition: opacity ease-in-out 0.9s;
+  height: 500px; 
+
 }
+
+.slider-wrapper {
+  display: flex;
+  transition: transform 1s ease; 
+}
+
+.slide {
+  flex: 0 0 100%;
+}
+
+.current-slide {
+  flex-shrink: 0;
+}
+
 .slide img {
   width: 100%;
-  height: 100%;
+  height: 100vh;
+
   object-fit: cover;
 }
-.active-anim {
-  opacity: 1;
-}
 
-
- img {
-  width: 25px;
-  height: 25px;
-  pointer-events: none;
-}
-
-
-.container-dots {
-  position: absolute;
-  bottom: 10px;
-  left: 50%;
-  transform: translateX(-50%);
-  display: flex;
-}
-.dot {
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  border: 3px solid #f1f1f1;
-  margin: 0 5px;
-  background: #f1f1f1;
-}
-.dot.active {
-  background: rgb(32, 32, 32);
+@media (max-width: 600px){
+  .slider-container {
+    height: 350px; 
+  }
+  .slide img {
+    height: 400px;
+  
+  
+  }
+  
 }
